--- a/index.html
+++ b/index.html
@@ -5,8 +5,44 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
+    <header class="page-header">
+      <img class="logo" scr="" alt="Логотип компании">
+      <nav class="navigation">
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link"href="main.html">Главная<\a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link"href="about.html">О Седоне<\a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link"href="catalog.html">Гостиницы<\a>
+          </li>
+        </ul>
+        <ul class="navigation-list navigation user">
+          <li class="navigation-item">
+            <a class="navigation-link"href="#">
+              <span class="visually-hidden">
+                Поиск
+              </span>
+            <\a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link"href="#">
+              <span class="visually-hidden">
+                Избранное
+              </span>
+            <\a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link"href="#">Вход<\a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+            
+    <main class="main-index">
+      <h1 class="visually-hidden">Седона</h1>
+    </main>
   </body>
 </html>
