--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link"href="main.html">Главная<\a>
+            <a class="navigation-link"href="main.html">Главная</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link"href="about.html">О Седоне<\a>
+            <a class="navigation-link"href="about.html">О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link"href="catalog.html">Гостиницы<\a>
+            <a class="navigation-link"href="catalog.html">Гостиницы</a>
           </li>
         </ul>
         <ul class="navigation-list navigation user">
@@ -35,7 +35,7 @@
             <\a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link"href="#">Вход<\a>
+            <a class="navigation-link"href="#">Вход</a>
           </li>
         </ul>
       </nav>
