--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
             
     <main class="main-index">
       <h1 class="visually-hidden">Седона</h1>
+      <div class="slogan">
+        <h2 class="slogan-title"Седона — небольшой городок в Аризоне,
+заслуживающий большего!</h2>
+        <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+      </div>
     </main>
+    
   </body>
 </html>
